# pinetime-rtic

./: LICENSE-MIT  README.md  jlink.ocd  jlinkgdbserver.sh  openocd.sh
pinetime-rtfm/: .embed.toml  .gdbinit  Cargo.toml  memory.x
pinetime-rtfm/.cargo/: config
pinetime-rtfm/src/: battery.rs  delay.rs  main.rs  monotonic_nrf52.rs
pinetime-rtic/: .gdbinit  .gitignore  Cargo.toml
pinetime-rtic/.cargo/: config
pinetime-rtic/src/: backlight.rs  delay.rs  main.rs  monotonic_nrf52.rs
