[package]
name = "pinetime-rtfm"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-graphics = "0.5"
panic-semihosting = "0.5"
st7735-lcd = "0.6.2"

[dependencies.nrf52832-hal]
git = "https://github.com/nrf-rs/nrf52-hal/"
branch = "master"
features = ["rt", "xxAA-package"]
default-features = false
