[package]
name = "pinetime-rtfm"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.5.1"
embedded-graphics = "0.6"
embedded-hal = "0.2"
panic-semihosting = "0.5"
st7789 = { version = "0.2", features = ["graphics", "batch", "buffer"], default-features = false }

[dependencies.nrf52832-hal]
git = "https://github.com/nrf-rs/nrf52-hal/"
branch = "master"
features = ["rt", "xxAA-package"]
default-features = false

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1
